@@ -7,6 +7,8 @@ Grok changes
 Bug fixes
 ---------
 
+* Use a configuration action for the registration of the static directory.
+
 * Fix imports from zope.app.securitypolicy.
 
 * Grok does not raise a GrokError anymore when it finds unassociated
